- fixed overflow x on credit index & show - fixed default message on credit index page

--- a/resources/assets/sass/styles/_sidebar.scss
+++ b/resources/assets/sass/styles/_sidebar.scss
@@ -1,6 +1,7 @@
 .content-sidebar{
 	border-right: 1px solid $border-color-default;
 	padding-right: 0px;
+	padding-left: 0px;
 
 	.sidebar-header{
 		border-bottom: 1px solid $border-color-default;
